--- a/doc_sample/rule.yml
+++ b/doc_sample/rule.yml
@@ -1,6 +1,15 @@
 version: 1
 rules:
 
+# 統一向け個別用語
+
+  - expected: カ月
+    patterns:
+      - か月
+      - ヵ月
+      - ヶ月
+      - ケ月
+
 # 統一向けテクニカルワード（今後追加：既にあるTechWord以外の内容であれば追加）
 
 #  - expected: ウォーター
