Textlint file and sample data updated

--- a/doc_sample/.textlintrc
+++ b/doc_sample/.textlintrc
@@ -13,7 +13,8 @@
         "同様に",
         "こなし",
         "程度", "過程", "旅程",
-        "正直かつ"
+        "正直かつ",
+        "（a）", "（b）", "（c）", "（d）"
       ]
     }
   },
