--- a/doc_sample/rule.yml
+++ b/doc_sample/rule.yml
@@ -12,8 +12,11 @@ rules:
 
 # 統一向けテクニカルワード（今後追加：既にあるTechWord以外の内容であれば追加）
 
-#  - expected: ウォーター
-#    pattern:  ウオーター
+  - expected: ウォーター
+    pattern:  ウオーター
+
+  - expected: フィーチャ
+    pattern:  フィーチャー
 
 
 # 石田さんからの用語チェック（オーム社流用語統一）
