Update textlint rule

--- a/doc_sample/rule.yml
+++ b/doc_sample/rule.yml
@@ -18,6 +18,8 @@ rules:
   - expected: フィーチャ
     pattern:  フィーチャー
 
+  - expected: マイルストン
+    pattern:  マイルストーン
 
 # 石田さんからの用語チェック（オーム社流用語統一）
 # きつければ/意味ない指摘が多い場合は以下から外すか、AllowListに追加することでエラー回避ください
