マニュアルおよび環境を更新（lint設定、索引情報収集用pythonスクリプト追加など）

--- a/doc_sample/rule.yml
+++ b/doc_sample/rule.yml
@@ -10,6 +10,9 @@ rules:
       - ヶ月
       - ケ月
 
+  - expected: もつ
+    pattern:  持つ
+
 # 統一向けテクニカルワード（今後追加：既にあるTechWord以外の内容であれば追加）
 
   - expected: ウォーター
