用語揺らぎルールの追加とサンプルの更新

--- a/doc_sample/rule.yml
+++ b/doc_sample/rule.yml
@@ -23,6 +23,13 @@ rules:
 
   - expected: マイルストン
     pattern:  マイルストーン
+    
+  - expected: ステークホルダ
+    pattern:  ステークホルダー
+
+  - expected: ユーザーストーリー
+    pattern:  ユーザストーリー
+
 
 # 石田さんからの用語チェック（オーム社流用語統一）
 # きつければ/意味ない指摘が多い場合は以下から外すか、AllowListに追加することでエラー回避ください
