--- a/doc_sample/.textlintrc
+++ b/doc_sample/.textlintrc
@@ -14,6 +14,9 @@
         "こなし",
         "程度", "過程", "旅程",
         "正直かつ",
+        "デグレード",
+        "スクラムマスター",
+        "サプライチェーン",
         "（a）", "（b）", "（c）", "（d）"
       ]
     }
@@ -89,7 +92,9 @@
       // 同一の単語を間違えて連続しているのをチェックする
       "ja-no-successive-word": true,
       // よくある日本語の誤用をチェックする
-      "ja-no-abusage": true,
+      "ja-no-abusage": {
+        "severity": "warning"
+      },
       // 冗長な表現をチェックする："することができる"という冗長な表現を"できる"にする
       "ja-no-redundant-expression": {
         "severity": "warning"
